first part of the report

--- a/Report/misc/definitions.tex
+++ b/Report/misc/definitions.tex
@@ -1,13 +1,15 @@
 \newcommand{\beq}{\begin{equation}}
 \newcommand{\eeq}{\end{equation}}
+\newcommand{\sgn}{\mathrm{sgn}}
 
 \newcommand{\red}[1]{\color{red}{#1}}
 
 \newcommand{\mref}{{\color{red}0.0}} % missing ref
-\newcommand{\todo}{{\color{tabred}[To be continued\dots]}}
+\newcommand{\todo}{\noindent{\color{tabred}[To be continued\dots]}}
 
 \definecolor{tabred}{RGB}{214, 39, 40}
 \definecolor{tabblue}{HTML}{1f77b4}
+\definecolor{tabgreen}{HTML}{2ca02c}
 
 %\usepackage[usenames,dvipsnames]{color} % more flexible names for syntax highlighting colors
 
