--- a/Report/misc/packages.tex
+++ b/Report/misc/packages.tex
@@ -25,7 +25,8 @@
 \hypersetup{
 	colorlinks=true,
 	urlcolor=tabblue,
-	linkcolor=tabblue
+	linkcolor=tabblue,
+	citecolor=tabgreen
 }
 
 \usepackage[citestyle=numeric-comp]{biblatex}
