--- a/Report/misc/bibliography.bib
+++ b/Report/misc/bibliography.bib
@@ -10,3 +10,17 @@
 	url = {https://doi.org/10.1093/acprof:oso/9780198525004.001.0001},
 }
 
+@article{https://doi.org/10.1002/andp.19985100401,
+	author = {von Delft, Jan and Schoeller, Herbert},
+	title = {Bosonization for beginners — refermionization for experts},
+	journal = {Annalen der Physik},
+	volume = {510},
+	number = {4},
+	pages = {225-305},
+	keywords = {Bosonization, Refermionization, Luttinger liquids},
+	doi = {https://doi.org/10.1002/andp.19985100401},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/andp.19985100401},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/andp.19985100401},
+	abstract = {Abstract This tutorial review gives an elementary and self-contained derivation of the standard identities (ψη(x) ∼ Fη e, etc.) for abelian bosonization in 1 dimension in a system of finite size L, following and simplifying Haldane's constructive approach. As a non-trivial application, we rigorously resolve (following Furusaki) a recent controversy regarding the tunneling density of states, ρdos(ω), at the site of an impurity in a Tomonaga-Luttinger liquid: we use finite-size refermionization to show exactly that for g = 1/2 its asymptotic low-energy behavior is ρdos(ω) ∼ ω. This agrees with the results of Fabrizio \& Gogolin and of Furusaki, but not with those of Oreg and Finkel'stein (probably because we capture effects not included in their mean-field treatment of the Coulomb gas that they obtained by an exact mapping; their treatment of anti-commutation relations in this mapping is correct, however, contrary to recent suggestions in the literature). — The tutorial is addressed to readers with little or no prior knowledge of bosonization, who are interested in seeing “all the details” explicitly; it is written at the level of beginning graduate students, requiring only knowledge of second quantization, but not of field theory (which is not needed here). At the same time, we hope that experts too might find useful our explicit treatment of certain subtleties that can often be swept under the rug, but are crucial for some applications, such as the calculation of ρdos(ω) — these include the proper treatment of the so-called Klein factors that act as fermion-number ladder operators (and also ensure the anti-commutation of different species of fermion fields), the retention of terms of order 1/L, and a novel, rigorous formulation of finite-size refermionization of both F e—iΦ(x) and the boson field Φ(x) itself.},
+	year = {1998}
+}
