--- a/Report/misc/packages.tex
+++ b/Report/misc/packages.tex
@@ -34,6 +34,7 @@
 %%%%%%% TIKZ OPTIONS FOR PGFPLOTSX
 \usetikzlibrary{arrows.meta}
 \usetikzlibrary{backgrounds}
+\usetikzlibrary{decorations.markings}
 \pgfplotsset{compat=newest}
 \usepgfplotslibrary{patchplots}
 \usepgfplotslibrary{fillbetween}
