--- a/Report/pictures/theory/lattice-ring-flux.tex
+++ b/Report/pictures/theory/lattice-ring-flux.tex
@@ -13,13 +13,13 @@
 			(\angle:2.05) -- ({\angle+45}:2.05);
 		
 		\node[anchor=center, color=tabgreen]
-			at ({\angle+22.5}:2.2) {$t$};
+			at ({\angle+22.5}:2.2) {$T$};
 		
 		\draw[color=tabblue, , postaction={decorate}]
 			({\angle+45}:1.95) -- (\angle:1.95);
 		
 		\node[anchor=center, color=tabblue]
-			at ({\angle+22.5}:1.5) {$t^*$};
+			at ({\angle+22.5}:1.45) {$T^*$};
 		
 		\filldraw[color=black]
 			(\angle:2) circle (1pt);
