--- a/Report/sections/fermi-hubbard.tex
+++ b/Report/sections/fermi-hubbard.tex
@@ -12,7 +12,7 @@
 		\input{pictures/theory/lattice-ring-flux.tex}
 		\label{subfig:lattice-ring-flux}
 	}
-	\caption{In Fig.~\ref{subfig:lattice-ring} a schematics of a $1D$ closed lattice is portrayed. The hopping amplitude $t$ is purely real, $t = \sgn(t) \abs{t}$. In Fig.~\ref{subfig:lattice-ring-flux} the same lattice is represented, but coupled to a finite threading flux $\Phi$ which can be absorbed via the pseudo-gauge transformation in Eq.~\todo. As a consequence, the hopping amplitude acquires a chirality which manifests in a non-null imaginary part, $t = \abs{t} e^{i\Phi/L}$.}
+	\caption{In Fig.~\ref{subfig:lattice-ring} a schematics of a $1D$ closed lattice is portrayed. The hopping amplitude $t$ is purely real, $t = \sgn(t) \abs{t}$. In Fig.~\ref{subfig:lattice-ring-flux} the same lattice is represented, but coupled to a finite threading flux $\Phi$ which can be absorbed via the pseudo-gauge transformation in Eq.~\todo. As a consequence, the hopping amplitude acquires a chirality which manifests in a non-null imaginary part, $T = t e^{i\Phi/L}$.}
 	\label{fig:lattice-rings}
 \end{figure}
 
@@ -20,10 +20,10 @@ In this project we limit ourselves to a polarized (spinless fermions) system. Ex
 \begin{equation}\label{eq:spinless-hamiltonian-pbc}
 	\hat H \equiv t \sum_{\ev{j,k}} \left[
 		\hat c_j^\dagger \hat c_k + \hat c_k^\dagger \hat c_j 
-	\right] - V \sum_{\ev{j,k}} \hat n_j \hat n_k - \mu \sum_{j=1}^L \hat n_j
+	\right] + V \sum_{\ev{j,k}} \hat n_j \hat n_k - \mu \sum_{j=1}^L \hat n_j
 \end{equation}
 defined on a closed $1D$ lattice ring, as in Fig.~\ref{subfig:lattice-ring}.
-This is a simple nearest-neighbors (NN) interacting lattice hamiltonian with NN attraction $V$, chemical potential $\mu$ and hopping amplitude $t$,
+This is a simple nearest-neighbors (NN) interacting lattice hamiltonian with NN interaction $V$, chemical potential $\mu$ and hopping amplitude $t$,
 \[
 	t, V, \mu \in \mathbb{R}
 \]
@@ -36,11 +36,11 @@ We will also be considering a magnetic flux $\Phi$ threading the ring and coupli
 	\qquad\qquad
 	\phi \equiv \frac{\Phi}{L}
 \]
-Incorporate the latter in the above hamiltonian: the hopping amplitude becomes complex (which is, chiral) $t = \abs{t} e^{\pm i\phi}$. We have, as in Fig.~\ref{subfig:lattice-ring-flux}
+Incorporate the latter in the above hamiltonian: the hopping amplitude becomes complex (which is, chiral) $t \to T \equiv t e^{i\phi}$, with $t, \phi \in \mathbb{R}$. We have, as in Fig.~\ref{subfig:lattice-ring-flux}
 \begin{equation}\label{eq:spinless-hamiltonian-tbc}
-	\hat H \equiv \abs{t} \sum_{j=1}^L \left[ 
+	\hat H \equiv t \sum_{j=1}^L \left[ 
 		e^{-i\phi} \hat c_j^\dagger \hat c_{j+1} + e^{i\phi} \hat c_{j+1}^\dagger \hat c_j 
-	\right] - V \sum_{j=1}^L \hat n_j \hat n_{j+1} - \mu \sum_{j=1}^L \hat n_j
+	\right] + V \sum_{j=1}^L \hat n_j \hat n_{j+1} - \mu \sum_{j=1}^L \hat n_j
 \end{equation}
 where a $\mod L$ operation is intended: $L+1 \leftrightarrow 1$. We want to indagate its ground-state properties. The relevant parameters will be the reduced hopping $t/V$ and chemical potential $\mu/V$.
 
@@ -50,7 +50,7 @@ The model presented above can be obtained rather easily through a Jordan-Wigner 
 \begin{equation}\label{eq:xxz-hamiltonian}
 	\hat H_\mathrm{XXZ} \equiv \sum_{\ev{j,k}} \left[
 		J_{xy} \left( 
-			\hat S_j^x \hat S_k^y + \hat S_k^y \hat S_j^x
+			\hat S_j^x \hat S_k^x + \hat S_k^y \hat S_j^y
 		\right) + J_z \hat S_j^z \hat S_k^z
 	\right] - h \sum_{j=1}^L \hat S_j^z 
 \end{equation}
@@ -62,7 +62,78 @@ The Jordan-Wigner mapping, only feasible in one dimension due to sites ordering,
 	\qquad
 	\hat S_j^z \to \hat n_j - \frac{\mathbb{I}}{2}
 \]
-Consider first a spin chain with open boundary conditions: the mapping results in
+Notice the appearance of the Jordan string,
+\[
+	e^{i\pi \sum_{k < j} \hat c_k^\dagger \hat c_k} = (-1)^{\zeta_j}
+	\qquad
+	\zeta_j \equiv \sum_{k < j} \hat n_k
+\]
+Essentially, the above string counts the fermions \textit{before} the site in question and gives back a factor $+1$ for even number, $-1$ for odd number. This works for open-end chains, where the concept of \textit{before} is actually well-defined. Let us take a $1\mathrm{D}$ spin chain with open boundary conditions (OBC). The transformation gives
+\[
+	\begin{aligned}
+		\hat H_\mathrm{XXZ} &\equiv \sum_{j=1}^{L-1} \left[
+			\frac{J_{xy}}{2} \left( 
+				\hat S_j^+ \hat S_{j+1}^- + \hat S_j^- \hat S_{j+1}^+
+			\right) + J_z \hat S_j^z \hat S_{j+1}^z
+		\right] - h \sum_{j=1}^L \hat S_j^z \\
+		&= \sum_{j=1}^{L-1} \left[
+			\frac{J_{xy}}{2} \left(
+				\hat c_{j+1}^\dagger \hat c_j + \hat c_j^\dagger \hat c_{j+1}
+			\right) + J_z \left(
+				\hat n_j - \frac{\mathbb{I}}{2}
+			\right) \left(
+				\hat n_{j+1} - \frac{\mathbb{I}}{2}
+			\right)
+		\right] - h \sum_{j=1}^L \left(
+			\hat n_{j} - \frac{\mathbb{I}}{2}
+		\right) \\
+		&= \sum_{j=1}^{L-1} \left[
+			\frac{J_{xy}}{2} \left(
+				\hat c_{j+1}^\dagger \hat c_j + \hat c_j^\dagger \hat c_{j+1}
+			\right) + J_z \hat n_j \hat n_{j+1}
+		\right] - \sum_{j=1}^L h_j \hat n_{j}
+		+ \frac{hL}{2} + \frac{J_z (L-1)}{2}
+	\end{aligned}
+\]
+where we defined:
+\[
+	h_j = \begin{cases}
+		h + J_z/2 &\qq{if} j=1,L \\
+		h + J_z &\qq{if} 1<j<L
+	\end{cases}
+\]
+Apart from a constant energy shift, in the bulk ($1<j<L$) this is our spinless fermions hamiltonian in Eq.~\eqref{eq:spinless-hamiltonian-pbc} with the following maps:
+\[
+	t = \frac{J_{xy}}{2}
+	\qquad
+	V = J_z
+	\qquad
+	\mu = h + J_z
+\]
+Now, add another site. This amounts for extra terms in the hamiltonian,
+\[
+	\hat H_\mathrm{XXZ} \to \hat H_\mathrm{XXZ} + \frac{J_{xy}}{2} \left( 
+		\hat S_L^+ \hat S_{L+1}^- + \hat S_L^- \hat S_{L+1}^+
+	\right) + J_z \hat S_L^z \hat S_{L+1}^z
+\]
+If we now aim to identify the open ends, which is, close the chain onto itself, the condition is
+\[
+	\hat S_{L+1}^\alpha = \hat S_1^\alpha
+\]
+The first-site Jordan-Wigner string is trivial, $\zeta_1 = 0$. The implementation of periodic boundary conditions requires in operator space then $\zeta_{L+1} = \zeta_1 = 0$. Finally, it is trivial to see
+\[
+	(-1)^{\zeta_L} \hat c_L^\dagger = (-1)^{\#_F} \hat c_L^\dagger
+	\qquad
+	(-1)^{\zeta_L+1} \hat c_L = (-1)^{\#_F} \hat c_L
+\]
+with $\#_F$ the total number of fermions on the chain. Putting all together, we see that as long as $\#_F$ is \textbf{even} {\color{tabred}[Check: I have the suspect it should be odd, actually...]}, we can impose periodic boundary conditions,
+\[
+	\hat S_L^+ \hat S_1^- = \hat c_L^\dagger \hat c_1
+	\qquad
+	\hat S_L^- \hat S_1^+ = \hat c_1^\dagger \hat c_L
+\]
+Simpler reasoning holds for the $z$ terms. Putting all together, we see that the PBC-$\mathrm{XXZ}$ model is mapped onto a spinless fermionic system on a ring with even number of particles.
+
 \todo
 
 \subsection{Bosonization of the model}
